[package]
name = "abcf-abci"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# abcf-manager = { path = "../abcf-manager" }
abcf-core = { path = "../abcf-core" }
async-abci = { path = "../async-abci" }
async-trait = "0.1.50"
tokio = { version = "1", features = ["rt", "net", "io-util", "sync"] }

[dev-dependencies]
env_logger = "0.8.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
