[package]
name = "abcf-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
log = "0.4.14"
prost = "0.7.0"
tendermint-proto = "0.20.0"
tokio = { version = "1", features = ["rt", "net", "io-util"] }
