[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path="../macros" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
tm-protos = { git = "ssh://git@github.com/FindoraNetwork/tendermint-sys.git" }
abcf = { path="../abcf" }