[package]
name = "abcf-macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ['full', 'extra-traits']}

[dev-dependencies]

serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
tm-protos = { git = "ssh://git@github.com/FindoraNetwork/tendermint-sys.git" }
abcf = { path="../abcf" }
