[package]
name = "abcf-macros"
version = "0.1.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ['full', 'extra-traits', "parsing"]}
async-trait = { version = "0.1.50" }
proc-macro2 = "1.0.29"

[dev-dependencies]
abcf-sdk = { path = "../sdk" }
hex = { version = "0.4" }
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
tm-protos = { git = "https://github.com/FindoraNetwork/tendermint-sys.git" }
abcf = { path="../abcf" }
tokio = { version = "1", features = ["full"] }
sha3 = "0.9"
digest = "0.9.0"
