[package]
name = "abcf-node"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint-sys = { git = "ssh://git@github.com/FindoraNetwork/tendermint-sys.git" }
tm-abci = { git = "ssh://git@github.com/FindoraNetwork/tendermint-sys.git" }
abcf = { path = "../abcf" }
bs3 = { git = "ssh://git@github.com/FindoraNetwork/bs3.git", default-features = false, features = ["nightly", "cbor"] }

[dev-dependencies]
# abcf-macros = { path = "../macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
async-trait = { version = "0.1.50" }
digest = "0.9.0"
sha3 = "0.9"
tokio = { version = "1", features = ["full"] }
abcf-sdk = { path="../sdk",features = ["http"] }
hex = "0.4.3"