[package]
name = "abcf-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abcf = { path="../abcf" }
serde = { version = "1.0.124", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
base64 = "0.13.0"
async-trait = { version = "0.1.50" }
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.4"
futures = {version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
async-tungstenite = { version = "0.14.0", features = ["async-std-runtime"], optional = true }
tm-protos = { git = "https://github.com/FindoraNetwork/tendermint-sys.git" }
log = "0.4.14"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
abcf-macros = {path = "../macros"}

[features]
std = []
http = ["reqwest", "std"]
websocket = ["std","async-tungstenite","futures"]

[[example]]
name = "mock_rpcs"
required-features = ["http"]

[[example]]
name = "mock_subscribe"
required-features = ["websocket"]
