[package]
name = "tokiogo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tokiogo"
crate-type = ["rlib", "staticlib"]

[dependencies]
async-trait = "0.1.50"
log = "0.4.14"
tokio = {version = "1", features = ["sync", "rt", "rt-multi-thread"]}
async-abci = {path = "../async-abci"}
tendermint-proto = "0.20.0"
prost = "0.7.0"
env_logger = "0.8.4"
ffi-support = "0.4.3"
