[package]
name = "utxo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abcf = { path = "../../abcf" }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
digest = "0.9.0"
bs3 = { git = "ssh://git@github.com/FindoraNetwork/bs3.git", default-features = false, features = ["nightly", "cbor"] }
async-trait = { version = "0.1.50" }
